fix bug of overflow-x

--- a/css/default.css
+++ b/css/default.css
@@ -5,6 +5,7 @@
 
 body {
     background-color: #b0cb2c;
+    overflow-x: hidden;
 }
 
 ::selection {
